updating class based views

--- a/books/collection/templates/books/book_detail.html
+++ b/books/collection/templates/books/book_detail.html
@@ -1,35 +1,46 @@
-{% extends "profile/base.html" %}
-{% load static %}
+{% extends "base/index.html" %}
+{% block body_block %}
 
 
 
-{% block content %}
+	{% block content %}
 
-<div>
-
-
+	<div>
 
 
+	<div class=crop_detail>
+		{% if bookdetail.image %}
+		<img class="photo_detail" src="/media/{{ bookdetail.image }}">
+		{% else %}
+		<img class="photo_blank" src="/media/covers/blank.jpg">
+		{% endif %}
+	</div>
 
-<h1>{{ acc.id }}</h1>
-<h1>{{ acc.title }}</h1>
-<h1>{{ acc.author }}</h1>
-<h1>{{ acc.year }}</h1>
-<h1>{{ acc.publisher }}</h1>
-<h1>{{ acc.artist }}</h1>
-<h1>{{ acc.quality }}</h1>
-<h1>{{ acc.price }}</h1>
-<h1>{{ acc.location }}</h1>
-<h1>{{ acc.genre }}</h1>
-<h1>{{ acc.weight }}</h1>
-<h1>{{ acc.pages }}</h1>
-<h1>{{ acc.isbn }}</h1>
-<h1>{{ acc.description }}</h1>
-<h1>{{ acc.notes }}</h1>
-<h1>{{ acc.user }}</h1>
+	<h1>{{ bookdetail.title }}</h1>
+	<h1>{{ bookdetail.author }}</h1>
+	<h1>{{ bookdetail.year }}</h1>
+	<h1>{{ bookdetail.publisher }}</h1>
+	<h1>{{ bookdetail.artist }}</h1>
+	<h1>{{ bookdetail.quality }}</h1>
+	<h1>{{ bookdetail.price }}</h1>
+	<h1>{{ bookdetail.location }}</h1>
+	<h1>{{ bookdetail.genre }}</h1>
+	<h1>{{ bookdetail.weight }}</h1>
+	<h1>{{ bookdetail.pages }}</h1>
+	<h1>{{ bookdetail.isbn | cut:".0" }}</h1>
+	<h1>{{ bookdetail.description }}</h1>
+	<h1>{{ bookdetail.notes }}</h1>
+
+	<div class=crop_detail>
+		{% if bookdetail.image %}
+		<img class="photo_detail" src="/media/{{ bookdetail.image }}">
+		{% else %}
+		<img class="photo_blank_detail" src="/media/covers/blank.jpg">
+		{% endif %}
+	</div>
 
 
+	</div>
 
-</div>
-
+	{% endblock %}
 {% endblock %}
