--- a/books/static/css/styles.css
+++ b/books/static/css/styles.css
@@ -254,7 +254,12 @@ a {
 	display: none;
 }
 
-
+.taggy {
+    background-color: #EEEEEE;
+    padding: 2px 4px;
+    border-radius: 2px;
+    font-size: 12px;
+}
 
 
 /*                                  */
