--- a/books/collection/templates/books/admin.html
+++ b/books/collection/templates/books/admin.html
@@ -7,25 +7,32 @@
 
 <div class="grid_container">
 
-{% if page_obj.object_list %}
+{% if bookadmin %}
 
-	{% for acc in page_obj.object_list %}
+	{% for acc in bookadmin %}
+<!-- 		{% if forloop.last %}
+		    <div 
+		        hx-trigger="revealed"
+		        hx-get="{% url 'collection:list' %}?page={{ page_obj.number|add:1 }}"
+		        hx-swap="afterend"
+		    >
+		{% else %}
+			<div>
+		{% endif %} -->
 	<div class="grid_info">
 		{% if acc.image %}
-		<div class="grid_info_top" style="background-image: url( /media/{{ acc.image }} );">
-			<!-- <img class="grid_blank" src="/media/{{ acc.image }}" alt="{{ acc.image }}"> -->
-		</div>
-		<div class="grid_info_bottom">
-		</div>
+			<div class="grid_info_top" style="background-image: url( /media/{{ acc.image }} );">
+				<!-- <img class="grid_blank" src="/media/{{ acc.image }}" alt="{{ acc.image }}"> -->
+			</div>
+			<div class="grid_info_bottom">
+			</div>
 		{% else %}
-		<div class="grid_info_top" style="background-image: url( /media/covers/blank.jpg );">
-			<!-- <img class="grid_blank" src="/media/covers/blank.jpg"> -->
-		</div>
-		<div class="grid_info_bottom">
-		</div>
+			<div class="grid_info_top" style="background-image: url( /media/covers/blank.jpg );">
+				<!-- <img class="grid_blank" src="/media/covers/blank.jpg"> -->
+			</div>
+			<div class="grid_info_bottom">
+			</div>
 		{% endif %}
-
-
 	</div>
 	{% endfor %}
 
