--- a/books/collection/templates/books/book_list.html
+++ b/books/collection/templates/books/book_list.html
@@ -7,7 +7,7 @@
 
 	<h1>{{ user | capfirst }}'s Stuff</h1>
 
-	{% if book_list %}
+	{% if booklist %}
 	<div class="test_p">
 
 		<table>
@@ -21,11 +21,11 @@
 			<th class="col_header">Cover</th>
 		</thread>
 
-		{% for acc in book_list %}
+		{% for acc in booklist %}
 
 		<tr>
 			<td>{{ acc.id }}</td>
-			<h1><a href="{{ acc.id }}">{{ acc.title }}</td>
+			<td><a href="{{ acc.id }}">{{ acc.title }}</a></td>
 			<td>{{ acc.author }}</td>
 			<td>{{ acc.year }}</td>
 			<td>{{ acc.genre }}</td>
