--- a/books/templates/base/index.html
+++ b/books/templates/base/index.html
@@ -11,6 +11,9 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 		<meta charset="utf-8">
   		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<!-- add htmx to the page -->
+		<script src="{% static 'js/htmx.min.js' %}" defer></script>
 	</head>
 	<body>
 
@@ -18,7 +21,7 @@
 		<ul class="nav_bar">
 			<div class="navbar_left">
 				<li><a class="nav_link" href="{% url 'home' %}">Home</a></li>
-				<li><a class="nav_link" href="{% url 'collection:index' %}">Collection</a></li>
+				<li><a class="nav_link" href="{% url 'collection:list' %}">Collection</a></li>
 				<li><a class="nav_link" href="{% url 'people' %}">People</a></li>
 				<li><a class="nav_link" href="{% url 'collection:entry' %}">Entry</a></li>
 			</div>
