--- a/books/collection/templates/books/confirmation.html
+++ b/books/collection/templates/books/confirmation.html
@@ -8,8 +8,9 @@
 	{{form}}
 	{% csrf_token %}
 	<input type="submit" class="btn" value="Submit">
-	<div class="cancel"><a href="{% url 'collection:list' %}">Cancel</a></div>
-
+	<td><a href="{% url 'collection:update' pk=acc.id %}">Cancel</a></td>
+	{% csrf_token %}
+	<input type="submit" class="btn_danger" value="Delete">
 </form>
 </div>
 {% else %}
