--- a/books/static/css/forms.css
+++ b/books/static/css/forms.css
@@ -45,13 +45,93 @@ label {
 }
 
 
+.btn_group {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.btn_group:after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.btn-group btn,
+.btn-group button {
+    float: left;
+    width: 50%;
+}
+
+
 input.btn {
     height: 80px;
     background-color: blue;
-    margin-bottom: 200px;
     cursor: pointer;
     color: white;
     font-size: 24px;
+    text-align: center;
+    border-radius: 4px;
+    isplay: flex;
+}
+
+
+.cancel {
+    height: 80px;
+    width: 100%;
+    margin-bottom: 20px;
+    display: flex;
+    background-color: #EEE;
+    cursor: pointer;
+    font-size: 24px;
+    color: #222;
+    text-align: center;
+    border-radius: 4px;
+    display: inline-block;
+    font-family: courier new, monospace;
+    line-height: 80px;
+    border: none;
+}
+
+.cancel a {
+    display:inline-block;
+    width:100%;
+    height:100%;
+}
+
+.delete {
+    height: 80px;
+    width: 100%;
+    margin-bottom: 20px;
+    display: flex;
+    background-color: red;
+    cursor: pointer;
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    border-radius: 4px;
+    display: inline-block;
+    font-family: courier new, monospace;
+    line-height: 80px;
+    border: none;
+}
+
+.delete a {
+    color: white;
+    display:inline-block;
+    width:100%;
+    height:100%;
+}
+
+
+input.btn_danger {
+    height: 80px;
+    background-color: red;
+    cursor: pointer;
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    border-radius: 4px;
 }
 
 .errorlist {
@@ -169,4 +249,15 @@ input[type=file]::file-selector-button {
 /*    height: 200px;*/
     object-position: 20% 0;
 }
+
+
+.taggy {
+    background-color: #EEEEEE;
+    padding: 2px 4px;
+    border-radius: 2px;
+    font-size: 12px;
+}
+
+
+
 
