--- a/books/static/css/styles.css
+++ b/books/static/css/styles.css
@@ -83,37 +83,49 @@ th, td {
 }*/
 
 table tr td:nth-child(1) {
-   	max-width: 40px;
+   	max-width: 60px;
+   	width: 60px;
 }
 
-table tr td:nth-child(2) {
-   	max-width: 500px;
-   	max-width: 200px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
 table tr td:nth-child(3) {
-   	max-width: 400px;
-   	max-width: 200px;
+   	max-width: 800px;
+   	min-width: 200px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
 table tr td:nth-child(4) {
-	text-align: right;
+   	max-width: 400px;
+   	min-width: 200px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
-table th:nth-child(4) {
+
+table th:nth-child(5),
+table tr td:nth-child(5) {
 	text-align: right;
 }
 
-table th:last-child {
+table th:nth-child(6),
+table tr td:nth-child(6) {
 	text-align: right;
+	width: 200px;
 }
 
+
+table th:last-child,
 table td:last-child {
 	text-align: right;
+    padding-right: 0px;
 }
+
+
+/*table th:last-child(-1),
+table td:last-child(-1) {
+	text-align: right;
+    padding-right: 0px;
+}*/
 
 
 table {
@@ -254,17 +266,25 @@ a {
 	display: none;
 }
 
-.taggy {
-    background-color: #EEEEEE;
-    padding: 2px 4px;
-    border-radius: 2px;
-    font-size: 12px;
-}
-
 
 /*                                  */
 
 
+.empty {
+
+	width: 100%;
+	height: 20px;
+	background-color: red;
+
+}
+
+.add_another {
+
+	width: 100%;
+	height: 20px;
+	background-color: whitesmoke;
+
+}
 
 
 
