--- a/books/templates/base/index.html
+++ b/books/templates/base/index.html
@@ -23,7 +23,7 @@
 				<li><a class="nav_link" href="{% url 'home' %}">Home</a></li>
 				<li><a class="nav_link" href="{% url 'collection:list' %}">Collection</a></li>
 				<li><a class="nav_link" href="{% url 'people' %}">People</a></li>
-				<li><a class="nav_link" href="{% url 'collection:entry' %}">Entry</a></li>
+				<li><a class="nav_link" href="{% url 'collection:entry' %}">Add</a></li>
 			</div>
 			<div class="navbar_right">
 				<li><a class="nav_link" href="{% url 'admin:index' %}" target="_blank">Admin</a></li>
